--- a/src/html/index.html
+++ b/src/html/index.html
@@ -30,7 +30,9 @@
    <li><a href="">Mobile</a></li>
  </ul>
     <div class="main">
-      <h1>Hello World</h1>
+      <h1>template</h1>
+      <hr>
+      <h2>sub-heading</h2>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="../typescript/index.ts"></script>
